// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`almost eligible days remaining on supervision requirements met 1`] = `
Array [
  Object {
    "text": "Negative UA within past 90 days",
    "tooltip": "Policy requirement: Negative UA within past 90 days, unless the client lacks a history of drug/alcohol abuse or has been supervised at low risk for more than one year",
  },
  Object {
    "text": "No felony convictions in past 24 months",
    "tooltip": "Policy requirement: Has not committed a felony while on probation or parole in past 24 months",
  },
  Object {
    "text": "Verified compliant employment",
    "tooltip": "Policy requirement: Verified employment status, full-time student, or adequate lawful income from non-employment sources have been confirmed within past 3 months",
  },
  Object {
    "text": "No active NCO, CPO, or restraining order",
    "tooltip": "Policy requirement: Does not have an active NCO, CPO, or restraining order",
  },
  Object {
    "text": "Currently low risk with no increase in risk level in past 90 days",
    "tooltip": "Policy requirement: Assessed at low risk level on LSI-R with no risk increase in past 90 days",
  },
]
`;

exports[`almost eligible income verified within 3 months requirements met 1`] = `
Array [
  Object {
    "text": "Negative UA within past 90 days",
    "tooltip": "Policy requirement: Negative UA within past 90 days, unless the client lacks a history of drug/alcohol abuse or has been supervised at low risk for more than one year",
  },
  Object {
    "text": "No felony convictions in past 24 months",
    "tooltip": "Policy requirement: Has not committed a felony while on probation or parole in past 24 months",
  },
  Object {
    "text": "No active NCO, CPO, or restraining order",
    "tooltip": "Policy requirement: Does not have an active NCO, CPO, or restraining order",
  },
  Object {
    "text": "Currently low risk with no increase in risk level in past 90 days",
    "tooltip": "Policy requirement: Assessed at low risk level on LSI-R with no risk increase in past 90 days",
  },
  Object {
    "text": "On supervision at least 1 year",
    "tooltip": "Has been on supervision for at least 1 year",
  },
]
`;

exports[`almost eligible income verified within 3 months requirements met 2`] = `
Array [
  Object {
    "text": "Needs employment verification",
    "tooltip": "Policy requirement: Verified employment status, full-time student, or adequate lawful income from non-employment sources have been confirmed within past 3 months.",
  },
]
`;

exports[`almost eligible on supervision at least a year requirements met 1`] = `
Array [
  Object {
    "text": "Negative UA within past 90 days",
    "tooltip": "Policy requirement: Negative UA within past 90 days, unless the client lacks a history of drug/alcohol abuse or has been supervised at low risk for more than one year",
  },
  Object {
    "text": "No felony convictions in past 24 months",
    "tooltip": "Policy requirement: Has not committed a felony while on probation or parole in past 24 months",
  },
  Object {
    "text": "Verified compliant employment",
    "tooltip": "Policy requirement: Verified employment status, full-time student, or adequate lawful income from non-employment sources have been confirmed within past 3 months",
  },
  Object {
    "text": "No active NCO, CPO, or restraining order",
    "tooltip": "Policy requirement: Does not have an active NCO, CPO, or restraining order",
  },
  Object {
    "text": "Currently low risk with no increase in risk level in past 90 days",
    "tooltip": "Policy requirement: Assessed at low risk level on LSI-R with no risk increase in past 90 days",
  },
]
`;

exports[`fully eligible requirements met 1`] = `
Array [
  Object {
    "text": "Negative UA within past 90 days",
    "tooltip": "Policy requirement: Negative UA within past 90 days, unless the client lacks a history of drug/alcohol abuse or has been supervised at low risk for more than one year",
  },
  Object {
    "text": "No felony convictions in past 24 months",
    "tooltip": "Policy requirement: Has not committed a felony while on probation or parole in past 24 months",
  },
  Object {
    "text": "Verified compliant employment",
    "tooltip": "Policy requirement: Verified employment status, full-time student, or adequate lawful income from non-employment sources have been confirmed within past 3 months",
  },
  Object {
    "text": "No active NCO, CPO, or restraining order",
    "tooltip": "Policy requirement: Does not have an active NCO, CPO, or restraining order",
  },
  Object {
    "text": "Currently low risk with no increase in risk level in past 90 days",
    "tooltip": "Policy requirement: Assessed at low risk level on LSI-R with no risk increase in past 90 days",
  },
  Object {
    "text": "On supervision at least 1 year",
    "tooltip": "Has been on supervision for at least 1 year",
  },
]
`;

exports[`no UA required requirements met 1`] = `
Array [
  Object {
    "text": "No UA needed",
    "tooltip": "Policy requirement: Negative UA within past 90 days, unless the client lacks a history of drug/alcohol abuse or has been supervised at low risk for more than one year",
  },
  Object {
    "text": "No felony convictions in past 24 months",
    "tooltip": "Policy requirement: Has not committed a felony while on probation or parole in past 24 months",
  },
  Object {
    "text": "Verified compliant employment",
    "tooltip": "Policy requirement: Verified employment status, full-time student, or adequate lawful income from non-employment sources have been confirmed within past 3 months",
  },
  Object {
    "text": "No active NCO, CPO, or restraining order",
    "tooltip": "Policy requirement: Does not have an active NCO, CPO, or restraining order",
  },
  Object {
    "text": "Currently low risk with no increase in risk level in past 90 days",
    "tooltip": "Policy requirement: Assessed at low risk level on LSI-R with no risk increase in past 90 days",
  },
  Object {
    "text": "On supervision at least 1 year",
    "tooltip": "Has been on supervision for at least 1 year",
  },
]
`;
